<resources>
    <string name="app_name">PSN Gift Cards Generator</string>
    <string name="note">Note.\nPlease input your correct email and true email in order for as to send the rewards to your inbox. We will send the rewards to you within 24-72 hours.</string>
    <string name="ok">OK</string>
    <string name="hint_email">Input your email</string>
    <string name="get_started">Get started</string>
    <string name="start_bottom_text"><![CDATA[This app & the services are not associated, affilliated, endorsed or sponsored by PlayStation]]></string>
    <string name="description">Exchange coins for PLAYSTATION Promo Codes</string>
    <string name="choose_coupon">CHOOSE COUPON</string>
    <string name="earn_coins">EARN COINS</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="coins">"%1$d Coins"</string>
    <string name="redeem">REDEEM</string>
    <string name="notivication_message">Get Your PSN Code for FREE Now</string>
    <string name="not_allow">Not allow</string>
    <string name="generate">GENERATE</string>
    <string name="promo_code">PROMO \n CODE</string>
    <string-array name="instruction">
        <item>1.Complete easy tasks and get coins</item>
        <item>2.Generate your personal promo code</item>
        <item>3.Exchange earned coins for free coupons with generated code</item>
        <item>4.We will send your coupon with promo code to your email address</item>
        <item>5.Share received promo code to you friends to use it on PlayStation Network</item>
        <item>6.They only need to charge their accounts to have fun together</item>
    </string-array>



</resources>
