<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.gnnsnowszerro.psngiftcardsgenerator.activitys.CouponActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/appbar_padding_top"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.gnnsnowszerro.psngiftcardsgenerator.custom.CustomToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="100">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_dimen"
            android:background="@drawable/background_blue_stroke_space"
            android:padding="@dimen/s_dimen">

            <TableRow>

                <RelativeLayout android:gravity="center">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/desc"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />
                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_code"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_blue_unpresed"
                    android:drawableTop="@drawable/dolar"
                    android:gravity="center"
                    android:padding="@dimen/s_dimen"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/background_blue_unpresed"
                    android:gravity="center"
                    android:paddingLeft="@dimen/s_dimen"
                    android:paddingRight="@dimen/s_dimen"
                    android:text="*****"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


            </TableRow>
        </TableLayout>


        <Button
            android:id="@+id/generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_dimen"
            android:layout_marginRight="@dimen/s_dimen"
            android:layout_marginTop="@dimen/s_dimen"
            android:background="@drawable/button_white_background"
            android:paddingLeft="@dimen/m_dimen"
            android:paddingRight="@dimen/m_dimen"
            android:text="@string/generate"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_dimen"
            android:layout_marginRight="@dimen/s_dimen"
            android:layout_marginTop="@dimen/s_dimen"
            android:text="@string/note" />

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_dimen"
            android:layout_marginRight="@dimen/s_dimen"
            android:layout_marginTop="@dimen/s_dimen"
            android:background="@drawable/background_blue_with_white_border"
            android:gravity="center"
            android:hint="@string/hint_email"
            android:padding="@dimen/s_dimen"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/redeem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_dimen"
            android:layout_marginRight="@dimen/s_dimen"
            android:layout_marginTop="@dimen/s_dimen"
            android:background="@drawable/button_white_background"
            android:paddingLeft="@dimen/m_dimen"
            android:paddingRight="@dimen/m_dimen"
            android:text="@string/redeem"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>


</LinearLayout>
